# ros_code

devel/: setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/lib/agitr/: hello  pubvel
devel/lib/pkgconfig/: agitr.pc  beginner_tutorials.pc
devel/share/agitr/cmake/: agitrConfig.cmake
devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
src/agitr/: CMakeLists.txt  hello.cpp  package.xml  pubvel.cpp
src/beginner_tutorials/: package.xml
