<?xml version="1.0"?>
<package>
  <name>agitr</name>
  <version>0.0.1</version>
  <description>The agitr package - Intro to ROS </description>
  <maintainer email="anu.nsit418@gmail.com">Anurag</maintainer>
  <license>anurag</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>turtlesim</build_depend>
  <run_depend>turtlesim</run_depend> 
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
